--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-“Hello, world”
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<h1> “software engineer by training, baker by heart”</h1>
