--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<div id="topbar">
+		<div id="logo">
+		  <h1> Mochi co </h1>
+		</div>
 
-<h1> “software engineer by training, baker by heart”</h1>
+		<div id="navbar">
+			<ul class="nav">
+			  <li>Menu</li>
+			  <li>About</li>
+			  <li>Contact</li>
+			</ul>
+		</div>
+	</div>
+
+</body>
+</html>
