--- a/index.html
+++ b/index.html
@@ -19,18 +19,26 @@
 		</div>
 	</div>
 
+	<div class="hero-image">
+  		<div class="hero-text">
+    	<h1>I am John Doe</h1>
+    	<p>And I'm a Photographer</p>
+    	<button>Hire me</button>
+  		</div>
+	</div>
+
 	<div class="image-row">
+		<div id="description">
+			<h1>Our Story</h1>
+		</div>
 	    <div class="image-box">
-	        <img src="http://placehold.it/500x500" />
+	        <img src="./assets/images/donut.jpg" />
 	    </div>
 	    <div class="image-box">
-	        <img src="http://placehold.it/500x500" />
+	        <img src="./assets/images/dough.jpg" />
 	    </div>
 	    <div class="image-box">
-	        <img src="http://placehold.it/500x500" />
-	    </div>
-	    <div class="image-box">
-	        <img src="http://placehold.it/500x500" />
+	        <img src="./assets/images/muffin.jpg" />
 	    </div>
 	</div>
 
