cropped images and fixed directories

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
 	<div id="topbar">
@@ -21,9 +21,8 @@
 
 	<div class="hero-image">
   		<div class="hero-text">
-    	<h1>I am John Doe</h1>
-    	<p>And I'm a Photographer</p>
-    	<button>Hire me</button>
+    	<h1>Mochico Bakery</h1>
+    	<p>Crafting baked goods with a mochi inspiration</p>
   		</div>
 	</div>
 
@@ -32,13 +31,13 @@
 			<h1>Our Story</h1>
 		</div>
 	    <div class="image-box">
-	        <img src="./assets/images/donut.jpg" />
+	        <img src="./assets/images/donut_cropped.jpg" />
 	    </div>
 	    <div class="image-box">
-	        <img src="./assets/images/dough.jpg" />
+	        <img src="./assets/images/dough_cropped.jpg" />
 	    </div>
 	    <div class="image-box">
-	        <img src="./assets/images/muffin.jpg" />
+	        <img src="./assets/images/muffin_cropped.jpg" />
 	    </div>
 	</div>
 
