added page title and description

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <html>
 <head>
 	<link rel="stylesheet" href="./assets/css/style.css">
+	<title>Mochico - Seattle Mochi Bakery</title>
+	<meta name="description" content="Specially crafted mochi muffins and mochi donuts in the heart of Seattle">
+	<meta name="keywords" content="mochi, muffin, donut, mochi donut, mochi muffin, donut, seattle, slu, south lake union">
 </head>
 <body>
 	<div id="topbar">
@@ -21,8 +24,8 @@
 
 	<div class="hero-image">
   		<div class="hero-text">
-    	<h1>Mochico Bakery</h1>
-    	<p>Crafting baked goods with a mochi inspiration</p>
+    	<h1>Mochi Bakery in Seattle</h1>
+    	<p>Crafting traditional baked goods with a mochi twist</p>
   		</div>
 	</div>
 
@@ -30,15 +33,30 @@
 		<div id="description">
 			<h1>Our Story</h1>
 		</div>
-	    <div class="image-box">
-	        <img src="./assets/images/donut_cropped.jpg" />
-	    </div>
-	    <div class="image-box">
-	        <img src="./assets/images/dough_cropped.jpg" />
-	    </div>
-	    <div class="image-box">
-	        <img src="./assets/images/muffin_cropped.jpg" />
-	    </div>
+		<div class="container">
+		    <div class="image-box">
+		        <img src="./assets/images/donut_cropped.jpg" />
+		    </div>
+		    <div class="story-text">
+		    	description <br>
+			</div>
+		</div>
+		<div class="container">
+			<div class="image-box">
+	        	<img src="./assets/images/dough_cropped.jpg" />
+	  	    </div>
+		    <div class="story-text">
+		    	description <br>
+			</div>
+	  	</div>
+	  	<div class="container">
+		    <div class="image-box">
+		        <img src="./assets/images/muffin_cropped.jpg" />
+		    </div>
+		    <div class="story-text">
+		    	description <br>
+			</div>
+		</div>
 	</div>
 
 	<div id="">
