--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 		<div id="navbar">
 			<ul class="nav">
-			  <li>Menu</li>
-			  <li>About</li>
-			  <li>Contact</li>
+			  <li>MENU</li>
+			  <li>ABOUT</li>
+			  <li>CONTACT</li>
 			</ul>
 		</div>
 	</div>
