added contact and social media

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 	<div class="hero-image">
   		<div class="hero-text">
-    	<h1>Mochi Bakery in Seattle</h1>
+    	<h1>Seattle Mochi Bakery</h1>
     	<p>Crafting traditional baked goods with a mochi twist</p>
   		</div>
 	</div>
@@ -59,7 +59,24 @@
 		</div>
 	</div>
 
-	<div id="">
+	<div id="contact">
+		<div id="description">
+			<h1>Contact Us</h1>
+		</div>
+		<div id="contact-info">
+			<div id="text">
+				<h1>We deliver!</h1>
+				<h1>Simply send an email request to the address below</h1>
+				<h1>Email: sea.mochico@gmail.com</h1>
+			</div>
+		</div>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d43016.13896246166!2d-122.3375695!3d47.635681!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1543133908549" width="600" height="450" frameborder="0" style="border:0; float:right;" allowfullscreen></iframe>
+	</div>
+
+	<div id="social-media">
+		<div id="description">
+			<h1>Follow us on social media!</h1>
+		</div>
 	</div>
 
 </body>
