--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		</div>
 		<div id="contact-info">
 			<div id="text">
-				<h1>We deliver!</h1>
+				<h1>We deliver within Seattle!</h1>
 				<h1>Simply send an email request to the address below</h1>
 				<h1>Email: sea.mochico@gmail.com</h1>
 			</div>
