--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<title>Mochico - Seattle Mochi Bakery</title>
 	<meta name="description" content="Specially crafted mochi muffins and mochi donuts in the heart of Seattle">
 	<meta name="keywords" content="mochi, muffin, donut, mochi donut, mochi muffin, donut, seattle, slu, south lake union">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 	<div id="topbar">
@@ -76,6 +79,21 @@
 	<div id="social-media">
 		<div id="description">
 			<h1>Follow us on social media!</h1>
+
+			<div id="media-icons">
+				<ul class="nav">
+				  <li>
+				  	<a href="https://www.facebook.com/Mochico-994501994084640" class="icon-block">
+				  		<i class="fa fa-facebook-square" style="font-size:36px"></i>
+				  	</a>
+				  </li>
+				  <li>
+				  	<a href="https://www.instagram.com/mochicoseattle/" class="icon-block">
+				  		<i class="fa fa-instagram" style="font-size:36px"></i>
+				  	</a>
+				  </li>
+				</ul>
+			</div>
 		</div>
 	</div>
 
