--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		        <img src="./assets/images/donut_cropped.jpg" />
 		    </div>
 		    <div class="story-text">
-		    	description <br>
+		    	Mochi Donuts <br>
 			</div>
 		</div>
 		<div class="container">
@@ -49,7 +49,7 @@
 	        	<img src="./assets/images/dough_cropped.jpg" />
 	  	    </div>
 		    <div class="story-text">
-		    	description <br>
+		    	Mochi Muffins <br>
 			</div>
 	  	</div>
 	  	<div class="container">
@@ -57,7 +57,7 @@
 		        <img src="./assets/images/muffin_cropped.jpg" />
 		    </div>
 		    <div class="story-text">
-		    	description <br>
+		    	Asian bakery <br>
 			</div>
 		</div>
 	</div>
