--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</div>
 		<div class="container">
 		    <div class="image-box">
-		        <img src="./assets/images/donut_cropped.jpg" />
+		        <img src="./assets/images/raspberry_pon_de_ring.jpg" />
 		    </div>
 		    <div class="story-text">
 		    	Mochi Donuts <br>
@@ -46,7 +46,7 @@
 		</div>
 		<div class="container">
 			<div class="image-box">
-	        	<img src="./assets/images/dough_cropped.jpg" />
+	        	<img src="./assets/images/mochi_muffin.jpg" />
 	  	    </div>
 		    <div class="story-text">
 		    	Mochi Muffins <br>
@@ -54,7 +54,7 @@
 	  	</div>
 	  	<div class="container">
 		    <div class="image-box">
-		        <img src="./assets/images/muffin_cropped.jpg" />
+		        <img src="./assets/images/matcha_pon_de_ring.jpg" />
 		    </div>
 		    <div class="story-text">
 		    	Asian bakery <br>
@@ -76,7 +76,7 @@
 		<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d43016.13896246166!2d-122.3375695!3d47.635681!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1543133908549" width="600" height="450" frameborder="0" style="border:0; float:right;" allowfullscreen></iframe>
 	</div>
 
-	<div id="social-media">
+<!-- 	<div id="social-media">
 		<div id="description">
 			<h1>Follow us on social media!</h1>
 
@@ -95,7 +95,7 @@
 				</ul>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 </body>
 </html>
