updated story descriptions

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 		<div id="navbar">
 			<ul class="nav">
-			  <li>MENU</li>
-			  <li>ABOUT</li>
-			  <li>CONTACT</li>
+			  <li><a href="index.html#menu">MENU</a></li>
+			  <li><a href="index.html#description">ABOUT</a></li>
+			  <li><a href="index.html#contact">CONTACT</a></li>
 			</ul>
 		</div>
 	</div>
@@ -33,7 +33,7 @@
 	</div>
 
 	<div class="image-row">
-		<div id="description">
+		<div id="description"><a name='description'></a>
 			<h1>Our Story</h1>
 		</div>
 		<div class="container">
@@ -41,7 +41,7 @@
 		        <img src="./assets/images/raspberry_pon_de_ring.jpg" />
 		    </div>
 		    <div class="story-text">
-		    	Mochi Donuts <br>
+		    	We're frying up fresh mochi donuts in the traditional pon de ring style! These donuts not only have a light and airy interior, but they also provide a unique pop and chew when bitten into. <br>
 			</div>
 		</div>
 		<div class="container">
@@ -49,7 +49,7 @@
 	        	<img src="./assets/images/mochi_muffin.jpg" />
 	  	    </div>
 		    <div class="story-text">
-		    	Mochi Muffins <br>
+		    	Our mochi muffins have a crisp exterior but an incredibly soft and chewy interior. These go perfectly with your morning cup of coffee or as a mid afternoon pick me up snack! <br>
 			</div>
 	  	</div>
 	  	<div class="container">
@@ -57,12 +57,12 @@
 		        <img src="./assets/images/matcha_pon_de_ring.jpg" />
 		    </div>
 		    <div class="story-text">
-		    	Asian bakery <br>
+		    	Our mochi muffins come in 3 flavors: brown sugar, matcha, and thai tea. The glazes for our mochi donuts rotate seasonally, but some main stays are our matcha sugar and black tea glazes. <br>
 			</div>
 		</div>
 	</div>
 
-	<div id="contact">
+	<div id="contact"><a name='contact'></a>
 		<div id="description">
 			<h1>Contact Us</h1>
 		</div>
