--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	        	<img src="./assets/images/mochi_muffin.jpg" />
 	  	    </div>
 		    <div class="story-text">
-		    	Our mochi muffins have a crisp exterior but an incredibly soft and chewy interior. These go perfectly with your morning cup of coffee or as a mid afternoon pick me up snack! <br>
+		    	Our mochi muffins have a crisp exterior but an incredibly soft and chewy interior. These go perfectly with your morning cup of coffee or as an afternoon pick me up! <br>
 			</div>
 	  	</div>
 	  	<div class="container">
@@ -57,7 +57,7 @@
 		        <img src="./assets/images/matcha_pon_de_ring.jpg" />
 		    </div>
 		    <div class="story-text">
-		    	Our mochi muffins come in 3 flavors: brown sugar, matcha, and thai tea. The glazes for our mochi donuts rotate seasonally, but some main stays are our matcha sugar and black tea glazes. <br>
+		    	Our mochi muffins come in 3 flavors: brown sugar, matcha, and thai tea. The glazes for our mochi donuts rotate seasonally, but some main stays are our matcha and milk tea glazes. <br>
 			</div>
 		</div>
 	</div>
